# internal/routes/routes.go
@@ -74,6 +74,7 @@ func NewRouter(clienteController *controller.ClienteController, servicioControll
 
 		r.With(authMW.RequireRoles(authmiddleware.RolAdministrador, authmiddleware.RolRecepcionista)).Post("/", pedidoController.Crear)
 		r.Get("/{pedidoID}", pedidoController.ObtenerDetalle)
+		r.With(authMW.RequireRoles(authmiddleware.RolAdministrador, authmiddleware.RolRecepcionista)).Put("/{pedidoID}/cancelar", pedidoController.Cancelar)
 		r.With(authMW.RequireRoles(authmiddleware.RolAdministrador, authmiddleware.RolRecepcionista)).Post("/{pedidoID}/prendas", prendaController.CrearVarias)
 		r.Get("/{pedidoID}/historial-estados", pedidoController.ObtenerHistorialEstados)
 		r.With(authMW.RequireRoles(authmiddleware.RolAdministrador, authmiddleware.RolRecepcionista, authmiddleware.RolOperario)).Put("/{pedidoID}/estado", pedidoController.ActualizarEstado)
